--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,4 @@
 {
     "workspaceFolder": "azdo",
-    "postCreateCommand": "git clone <url> azdo"
+    "postCreateCommand": "git clone https://anthc-devops.visualstudio.com/_git/eshoponweb-public azdo"
 }
